  o restrict the proposed input-methods for each language
- bootloader:
  o when reading existing menu.lst, keep verbatim entries for which the device
  has no mount-point
  o handle "alien" grub entries that will be kept verbatim (#23591)
  o handle "root (hd...)" for menu.lst entries (#23591)
    (nb: when writing, "root ..." will not be used)
- diskdrake:
  o fix garbaged error messages when umounting fs
  o disallow "Use for loopback" when the partition used for loopback is
    not formatted (#35535)
  o always display the {info} field of the drive (not only in expert mode)

Version 10.5.3 - 9 November 2007, by Pascal "Pixel" Rigaux

- bootloader-config:
  o do not create "linux" entries for xen kernels, but "xen" entries instead
- localedrake:
  o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
- drakbug:
  o prevent altering tool and the like when catching a bug (#35241)

Version 10.5.2 - 6 November 2007, by Thierry Vignaud

- diskdrake:
  o add support for ext4
- drakbug:
  o keep buggy process around so that we can run gdb on it (if perl segfaulted)
  o report gdb trace if possible
- harddrake: detect storage and various controllers before anything else
  (so that storage devices get detected at first boot on live)

Version 10.5.1 - 31 October 2007, by Thierry Vignaud

- bootloader-config:
  o bootloader-config must not need network::network from libdrakx-net
  o if drakx-kbd-mouse-x11 is not installed, simply don't add bootsplash
    instead of dying
- fix buttons order under KDE when using compiz (by detecting kde-window-decorator)
- drakclock/finish-install: disable DPMS and screensaver when setting time,
  not to blank monitor (#17031)

Version 10.5.0 - 15 October 2007, by Thierry Vignaud

- localedrake:
  o do propose "Suisse" after selecting french language (#34675)
- draksec:
  o fix switching from "no_password" to "_password" (#34490)

Version 10.4.239 - 5 October 2007, by Thierry Vignaud
