@@ -1,3 +1,6 @@
+- diskdrake:
+  o drop "Undo", "Restore partition table", "Save partition table"
+    (preparing to switch to libparted)
 - don't check /proc/partitions for a partition_table::lvm 
   (ie PV on non partitioned drive)
 
